--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.37",
-    "@mui/material": "^5.13.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-data-grid": "^6.7.0",
     "@paypal/react-paypal-js": "^7.8.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.0",
@@ -17,7 +19,7 @@
     "country-state-city": "^3.1.4",
     "eslint-plugin-react-hooks": "^5.0.0-canary-efb381bbf-20230505",
     "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
+    "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
